# mechanics-core

./: Cargo.toml  README.md
docs/: audit-findings.md  behavior.md  development.md
examples/: test-script.rs
json-schema/: mechanics-config.schema.json  mechanics-job.schema.json
scripts/: check-contract-consistency.sh
src/: error.rs  executor.rs  http.rs  job.rs  lib.rs  pool.rs  runtime.rs
src/http/: config.rs  endpoint.rs  headers.rs  mod.rs  model.rs  retry.rs  template.rs  transport.rs
src/http/endpoint/: execute.rs  mod.rs  request.rs  validate.rs
src/http/tests/: headers.rs  mod.rs  options.rs  query.rs  resilience.rs  serde_config.rs  template.rs
src/internal/: error.rs  executor.rs  job.rs  mod.rs  runtime.rs
src/internal/http/: config.rs  headers.rs  options.rs  query.rs  transport.rs
src/internal/http/endpoint/: execute.rs  mod.rs  request.rs  validate.rs
src/internal/http/tests/: headers.rs  mod.rs  resilience.rs  response_limit.rs  serde_config.rs
src/internal/pool/: api.rs  config.rs  drop_impl.rs  shared.rs  worker.rs
src/internal/pool/tests/: endpoint_network.rs  internet.rs  mod.rs  queue.rs  runtime_behavior.rs  synthetic_modules.rs
src/internal/runtime/: buffer_like.rs
src/internal/runtime/builtins/: base32.rs  base64.rs  endpoint.rs  form_urlencoded.rs  hex.rs  mod.rs  rand.rs  uuid.rs
src/pool/: api.rs  config.rs  drop_impl.rs  mod.rs  restart_guard.rs  shared.rs  worker.rs
src/pool/tests/: endpoint_network.rs  endpoint_validation.rs  internet.rs  lifecycle.rs  mod.rs  queue.rs  runtime_behavior.rs  synthetic_modules.rs
src/runtime/: buffer_like.rs  synthetic_modules.rs
src/runtime/builtins/: base32.rs  base64.rs  endpoint.rs  form_urlencoded.rs  hex.rs  mod.rs  rand.rs  uuid.rs
ts-types/: README.md  mechanics-base32.d.ts  mechanics-base64.d.ts  mechanics-endpoint.d.ts  mechanics-form-urlencoded.d.ts  mechanics-hex.d.ts  mechanics-json-shapes.d.ts  mechanics-rand.d.ts  mechanics-uuid.d.ts
