[package]
name = "mechanics-core"
version = "0.1.0"
edition = "2024"

[dependencies]
boa_engine = "0.21.0"
boa_gc = "0.21.0"
futures-concurrency = "7.7.1"
futures-lite = "2.6.1"
parking_lot = "0.12.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
