[package]
name = "mechanics-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

authors = ["metastable-void"]
description = "mechanics automation framework (core)"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-core"
homepage = "https://github.com/metastable-void/mechanics-core"
documentation = "https://github.com/metastable-void/mechanics-core#readme"
keywords = ["automation", "orchestration", "javascript", "worker-pool", "boa"]
categories = ["concurrency", "config", "api-bindings"]

[dependencies]
boa_engine = { version = "0.21.0", features = ["temporal"] }
boa_gc = "0.21.0"
crossbeam-channel = "0.5.15"
data-encoding = "2.9.0"
futures-concurrency = "7.7.1"
futures-lite = "2.6.1"
getrandom = "0.4.2"
hex = "0.4.3"
parking_lot = "0.12.5"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", default-features = false, features = ["rt", "time"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v3", "v4", "v5", "v6", "v7", "rng"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
